# rest/api/v1/openapi.yml
@@ -83,7 +83,7 @@ paths:
       operationId: getHookStorage
       parameters:
         - $ref: "#/components/parameters/accountIdOrAliasOrEvmAddressPathParam"
-        - $ref: "#/components/parameters/hookIdQueryParam"
+        - $ref: "#/components/parameters/hookIdPathParam"
         - $ref: "#/components/parameters/keyQueryParam"
         - $ref: "#/components/parameters/limitQueryParam"
         - $ref: "#/components/parameters/orderQueryParamAsc"
@@ -4638,6 +4638,17 @@ components:
         minimum: 1
         maximum: 9223372036854775807
       required: false
+    hookIdPathParam:
+      description: The ID of the hook
+      example: 1234
+      in: path
+      name: hookId
+      schema:
+        format: int64
+        type: integer
+        minimum: 1
+        maximum: 9223372036854775807
+      required: true
     keyQueryParam:
       description: A string representing a pair of operator:address of a hook storage entry
       examples:
